# cot

./: .gitignore  .gitmodules  .mcp.json  AOT_EXECUTION_PLAN.md  AOT_STRATEGY.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CRANELIFT_COMPLETION_PLAN.md  CRANELIFT_PORT_MASTER_PLAN.md  EMIT_ALLOCS_PORT_PLAN.md  GAP_ANALYSIS.md  Makefile  NATIVE_AOT_FIXES.md  PHASE3_LANGUAGE_FEATURES.md  PHASE7_EXECUTION_PLAN.md  PHASE7_PHASE_A_EXECUTION.md  PHASE7_PHASE_B_EXECUTION.md  PHASE7_PHASE_C_EXECUTION.md  PHASE7_PHASE_D_EXECUTION.md  PHASE7_TASK71_ARCH_FIX.md  PROJECT_AUDIT.md  README.md  ROADMAP_PHASE2.md  TESTING_FRAMEWORK_PLAN.md  TESTING_TASKS.md  TROUBLESHOOTING.md  VISION.md  WASM_BACKEND.md  WASM_CODEGEN_FIXES.md  build.zig  go.work  install.sh
.github/workflows/: release.yml  test.yml
audit/: CRANELIFT_PORT_STATUS.md  LIVENESS_AUDIT.md  NATIVE_CODEGEN_PARITY.md  PROLOGUE_EPILOGUE_PLAN.md  REGALLOC_PORT_AUDIT.md  SUMMARY.md  TYPE_FLOW.md  arc_audit.md  driver.zig.md  dwarf.zig.md  main.zig.md  pipeline_debug.zig.md  regalloc2_port_gaps.md
audit/clif/: builder.zig.md  dfg.zig.md  function.zig.md  instructions.zig.md  integration.md  jumptable.zig.md  layout.zig.md  types.zig.md
audit/core/: errors.zig.md  target.zig.md  testing.zig.md  types.zig.md
audit/frontend/: arc_insertion.zig.md  ast.zig.md  checker.zig.md  errors.zig.md  ir.zig.md  lower.zig.md  parser.zig.md  scanner.zig.md  source.zig.md  ssa_builder.zig.md  token.zig.md  types.zig.md
audit/native/: amd64.zig.md  amd64_asm.zig.md  amd64_regs.zig.md  arm64.zig.md  arm64_asm.zig.md  generic.zig.md  liveranges_audit.md  merge_audit.md  phase7_integration_audit.md  regalloc_audit.md
audit/ssa/: abi.zig.md  block.zig.md  compile.zig.md  debug.zig.md  dom.zig.md  func.zig.md  liveness.zig.md  op.zig.md  regalloc.zig.md  stackalloc.zig.md  test_helpers.zig.md  value.zig.md
audit/wasm/: gen.zig.md
claude/: AC_SYNTAX.md  ADVANCED_ARCHITECTURE.md  ARCHITECTURE.md  ARC_AUDIT.md  AUDIT.md  AUDIT_REPORT.md  BUSINESS_MODEL.md  CONCURRENCY_DESIGN.md  CONSTRUCT_MASTER_LIST.md  COTTY_COMPILER_BUGS.md  DEVELOPER_EXPERIENCE.md  DISTRIBUTION_DESIGN.md  DX_PARITY.md  DYLIB_ENVIRON_FIX_PLAN.md  FEATURES.md  FORK_EXECVE_DYLIB_BUG.md  HANDOFF.md  LLVM_MLIR_CODING_STANDARDS.md  LOWER_COT_PORTING_PLAN.md  NEXT_SESSION.md  PHASE5_DESIGN.md  PHASE6_DESIGN.md  PHASE7_WITNESS_DESIGN.md  PIPELINE_ARCHITECTURE.md  REFERENCES.md  RELEASE_PLAN.md  ROADMAP.md  ROADMAP_1_0.md  SELF_HOSTING_EXECUTION_PLAN.md  SELF_HOSTING_FEATURES.md  SELF_HOSTING_STATUS.md  TESTING.md  VERSION_TRAJECTORY.md
claude/archive/: ARC_DESIGN.md  CRANELIFT_PORT_MASTER_PLAN.md  DYLIB_ENVIRON_FIX_PLAN.md  PHASE4_DESIGN.md  PHASE6_DESIGN.md  PHASE7_DESIGN.md  ROADMAP_PHASE2.md  SESSION_POSTMORTEM.md  STRUCT_RETURN_CODEGEN_BUG.md
claude/specs/: CICD_SPEC.md  WASM_3_0_REFERENCE.md
cmake/: CIRConfig.cmake.in  COTConfig.cmake.in
compiler/: PIPELINE.md  cli.zig  driver.zig  main.zig  project.zig
compiler/codegen/: arc.zig  js_glue.zig  native_e2e_test.zig  print_runtime.zig  test_runtime.zig  wasi_runtime.zig  wasm.zig  wasm_e2e_test.zig  wasm_gen.zig
compiler/core/: errors.zig  target.zig  testing.zig  types.zig
compiler/frontend/: arc_insertion.zig  ast.zig  checker.zig  e2e_test.zig  errors.zig  formatter.zig  integration_test.zig  ir.zig  lower.zig  parser.zig  scanner.zig  ssa_builder.zig  token.zig  types.zig
compiler/lsp/: analysis.zig  completion.zig  hover.zig  mcp_server.zig  references.zig  server.zig
compiler/ssa/: compile.zig  debug.zig  func.zig  op.zig  stackalloc.zig  test_helpers.zig  value.zig
cot/: CMakeLists.txt  main.cpp
docs/: ARC_DESIGN.md  BR_TABLE_ARCHITECTURE.md  BR_TABLE_JUMP_TABLE_BUG.md  COT_SYNTAX.md  LIST_CURRENT_STATE.md  MEMCPY_BUILTIN.md  PIPELINE_ARCHITECTURE.md  PRODUCTION_LANGUAGE_PLAN.md  ROADMAP_1_0.md  SLICE_PARAMS.md  TESTING.md  TRAITS.md  TRAP_BUILTIN.md  VERSION_TRAJECTORY.md  WASI_IO_ISSUES.md  WASM_UPGRADE_PLAN.md  cotlang-design-summary.md  getting-started.md  stdlib.md  syntax.md
docs/archive/: NATIVE_AOT_FIXES.md  PHASE3_COMPLETE.md
docs/specs/: CICD_SPEC.md  MCP_SERVER_SPEC.md  WASM_2_0_REFERENCE.md  WASM_3_0_REFERENCE.md  wasm-3.0-full.txt
examples/: collections.cot  error_handling.cot  fizzbuzz.cot  generics.cot  hello.cot  json_processing.cot  string_processing.cot  structs.cot
libac/: codegen.cpp  codegen.h  parser.cpp  parser.h  scanner.cpp  scanner.h
libcir/: CMakeLists.txt
libcir/c-api/: CIRCApi.cpp  CIRCApi.h
libcir/include/CIR/: CIRDialect.td  CIROps.h  CIROps.td  CIRTypes.td
libcir/lib/: CIRDialect.cpp
libcot/: CMakeLists.txt
libcot/c-api/: COTCApi.cpp  COTCApi.h
libcot/include/COT/: CIRToLLVMPatterns.h  Compiler.h  Passes.h  Pipeline.h
libcot/lib/: ArithmeticPatterns.cpp  BitwisePatterns.cpp  CIRToLLVM.cpp  Compiler.cpp  ControlFlowPatterns.cpp  MemoryPatterns.cpp  Pipeline.cpp  WitnessTablePatterns.cpp
libcot/lib/Transforms/: GenericSpecializer.cpp  SemanticAnalysis.cpp
libsc/: bridge.h  module.modulemap  sc.swift
libtc/: codegen.go  go.mod  go.sum  libtc.h  main.go  mlir.go  parse_test.go
libzc/: astgen.zig  build.zig  lib.zig  mlir.zig
mcp/: cot-mcp.cot
runtime/: arc.zig
scripts/: run_browser_tests.sh  run_native_tests.sh  run_wasm_tests.sh
self/: ast.cot  cot.json  errors.cot  main.cot  scanner.cot  source.cot  token.cot
self/frontend/: ast.cot  checker.cot  errors.cot  lower.cot  parser.cot  scanner.cot  source.cot  token.cot  types.cot
src/: driver.zig  dwarf.zig  pipeline_debug.zig
src/core/: target.zig
src/frontend/: ast.zig  ir.zig  lower.zig  parser.zig  ssa_builder.zig  token.zig
src/ssa/: abi.zig  op.zig  (+3 more)
stdlib/: async.cot  cli.cot  crypto.cot  debug.cot  dotenv.cot  encoding.cot  fmt.cot  fs.cot  http.cot  io.cot  json.cot  list.cot  map.cot  math.cot  os.cot  path.cot  process.cot  random.cot  regex.cot  semver.cot  sort.cot  string.cot  string_map.cot  sys.cot  testing.cot  time.cot  url.cot  uuid.cot
test/: 001_int_literal.ac  002_arithmetic.ac  003_function.ac  004_multi_op.ac  run.sh  run_all.sh  run_inline.sh  test_inline.cot
(+493 files in other folders)
